# buffybox

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Makefile  Pipfile  README.md  README.md.new  archive.sh  buffyboard.h  command_line.c  command_line.h  config.c  config.h  cursor.h  find-lvgl-sources.sh  indev.c  indev.h  layout.c  layout.h  libinput_multi.c  libinput_multi.h  lv_conf.h  lv_drv_conf.h  main.c  meson.build  meson_options.txt  montserrat_extended_32.c  regenerate-examples.sh  regenerate-layouts.sh  release.sh  sq2lv.c  sq2lv.h  sq2lv_layouts.c  sq2lv_layouts.h  squeek2lvgl.py  terminal.c  themes.c  themes.h  uinput_device.c  (+2 more)
buffyboard/: README.md  buffyboard.conf  buffyboard.h  buffyboard.service.in  command_line.c  command_line.h  config.c  config.h  cursor.c  cursor.h  find-lvgl-sources.sh  font_32.c  getty-buffyboard.conf  indev.c  indev.h  lv_conf.defaults  lv_conf.h  lv_drv_conf.h  main.c  meson.build  regenerate-fonts.sh  regenerate-layouts.sh  regenerate-screenshots.sh  sq2lv_layouts.c  sq2lv_layouts.h  terminal.c  terminal.h  uinput_device.c  uinput_device.h
buffyboard/doc/: buffyboard.1.scd  buffyboard.conf.5.scd
buffyboard/screenshots/: README.md
buffyboard/test/: helpers.sh  test-all.sh  test-version-matches-meson-and-changelog.sh
doc/: unl0kr.1.scd  unl0kr.conf.5.scd
dummy/: Cargo.toml  README.md  lv_conf.h  lv_drv_conf.h
dummy/src/: main.rs
examples/de+es+fr+us/: sq2lv_layouts.c  sq2lv_layouts.h
examples/de-with-custom-shift-keycap/: sq2lv_layouts.c  sq2lv_layouts.h
examples/es+fr+us/: sq2lv_layouts.c  sq2lv_layouts.h
examples/us/: sq2lv_layouts.c  sq2lv_layouts.h
examples/us+de/: sq2lv_layouts.c  sq2lv_layouts.h
examples/us-terminal-with-scancodes/: sq2lv_layouts.c  sq2lv_layouts.h
f0rmz/: README.md  command_line.c  command_line.h  config.c  config.h  lv_conf.defaults  main.c  meson.build  sq2lv_layouts.c
iskey/: README.md  iskey.c  meson.build
man/: buffyboard.1.scd  buffyboard.conf.5.scd  meson.build  unl0kr.1.scd
other/buffyboard/: command_line.c  regenerate-layouts.sh
other/squeek2lvgl/: regenerate-examples.sh
shared/: backends.c  backends.h  cli_common.c  cli_common.h  config.c  config.h  display.c  display.h  header.c  header.h  indev.c  indev.h  keyboard.c  keyboard.h  log.c  log.h  terminal.c  terminal.h  theme.c  theme.h  themes.c  themes.h
shared/cursor/: README.md  cursor.c  cursor.h  package-lock.json  regenerate.sh
shared/fonts/: README.md  font_32.c  regenerate.sh
squeek2lvgl/: README.md  meson.build  regenerate-examples.sh  sq2lv.c  sq2lv.h  squeek2lvgl.py
squeek2lvgl/examples/es+fr+us/: sq2lv_layouts.h
test/: build-with-drm.sh  build-without-drm.sh  helpers.sh  test-uses-drm-backend-if-selected-via-config-and-available.sh  test-uses-fb-backend-by-default.sh  test-uses-fb-backend-if-selected-via-config.sh  test-version-matches-meson-and-changelog.sh  test-with-drm.sh  test-without-drm.sh
unl0kr/: README.md  archive.sh  backends.c  backends.h  command_line.c  command_line.h  config.c  config.h  cursor.c  cursor.h  find-lvgl-sources.sh  font_32.c  indev.c  indev.h  log.c  log.h  lv_conf.defaults  lv_conf.h  lv_drv_conf.h  main.c  meson.build  package-lock.json  regenerate-cursor.sh  regenerate-fonts.sh  regenerate-layouts.sh  regenerate-screenshots.sh  release.sh  sq2lv_layouts.c  sq2lv_layouts.h  terminal.c  terminal.h  theme.c  theme.h  themes.c  themes.h  unl0kr-agent.c  unl0kr-agent.path  unl0kr-agent.service.in  unl0kr.conf  unl0kr.h
unl0kr/doc/: unl0kr.1.scd  unl0kr.conf.5.scd
unl0kr/screenshots/: README.md
unl0kr/test/: helpers.sh  test-all.sh  test-uses-drm-backend-if-selected-via-config-and-available.sh  test-uses-fb-backend-by-default.sh  test-uses-fb-backend-if-drm-selected-via-config-but-unavailable.sh  test-uses-fb-backend-if-selected-via-config.sh  test-version-matches-meson-and-changelog.sh  test-with-drm.sh  test-without-drm.sh
