[package]
name = "dummy"
version = "0.1.0"
edition = "2021"

[dependencies]
cstr_core = "0.2.6"
lvgl = { version = "0.6.2", features = ["alloc", "drivers", "nightly"] }
lvgl-sys = { version = "0.6.2", features = ["drivers"] }
matrix-sdk = "0.7.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
