[package]
name = "dummy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
cstr_core = { version = "0.2.6" }
dirs = "5.0.1"
lvgl = { git = "https://github.com/Johennes/lv_binding_rust.git", branch = "johannes/strncmp", features = ["drivers", "nightly"] }
lvgl-sys = { git = "https://github.com/Johennes/lv_binding_rust.git", branch = "johannes/strncmp" }
matrix-sdk = "0.7.1"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
